@@ -65,11 +65,7 @@ class Html5Audio(Filter):
         for match in re_audio.finditer(text):
             sound_files.append("'" + \
                 urllib.quote(match.group(1).encode("utf-8"), safe="/:") + "'")
-            #sound_files.append("'" + urllib.quote(match.group(1).encode("utf-8"), safe="/:").replace("%","\\x") + "'")
-            #sound_files.append("'" + match.group(1) + "'")
-            #sound_files.append("'" + match.group(1).encode("mbcs") + "'")
             text = text.replace(match.group(0), "")
-        #print sound_files, ",".join(sound_files)
         text = script + text + "<div id='player'></div>"
         text = text.replace("_SOUNDFILES_", ",".join(sound_files))
         if self.config()["media_autoplay"] == False:
