@@ -1,7 +1,11 @@
+-Fix playing of sound files containing unicode characters. Unfortunately, due
+ to a bug with Qt under Windows, this only works on Linux (reported by Barbara).
+-Copy media directory when doing 'Save as..' (reported by Henrik).
+-example plugin to lock down the UI (requested by Eugene Campbell).
+
 -Bug fix when importing xml files with anonymous ids after importing an
  anynymous id file just before that (reported by Scott Youngman).
 -Fix searching for [ and ] (reported by Scott Youngman).
-
 -If you resume your pc from hibernation in the morning, the new day's cards are
  now added more quickly to your queue. This also makes sure there is more data
  available to calculate the past schedule.
